CIGO-Core/deployments/kubernetes/cigo-elasticsearch-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    name: elasticsearch
spec:
  ports:
  - name: "listener"
    port: 9200
    targetPort: 9200
  clusterIP: None
  selector:
    app: elasticsearch
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch
spec:
  selector:
        matchLabels:
            app: elasticsearch
  serviceName: elasticsearch
  replicas: 1
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: 127.0.0.1:3306
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              name: cloudsql-db-credentials
              key: username
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: cloudsql-db-credentials
              key: password
        - name: ES_JAVA_OPTS
          value: -Xms512m -Xmx512m
        - name: bootstrap.memory_lock
          value: "true"
        - name: cluster.name
          value: docker-cluster
        - name: discovery.type
          value: single-node
        - name: discovery.zen.minimum_master_nodes
          value: "1"
        - name: xpack.graph.enabled
          value: "false"
        - name: xpack.ml.enabled
          value: "false"
        - name: xpack.monitoring.enabled
          value: "false"
        - name: xpack.security.enabled
          value: "false"
        - name: xpack.watcher.enabled
          value: "false"
        image: docker.elastic.co/elasticsearch/elasticsearch:5.6.3
        name: elasticsearch
        ports:
        - containerPort: 9200
        resources: {}

      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=buoyant-episode-216912:europe-west1:mysql-share=tcp:3306",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true

      volumes:
          - name: cloudsql-instance-credentials
            secret:
              secretName: cloudsql-instance-credentials
      restartPolicy: Always
