CIGO-Core/deployments/kubernetes/cigo-zookeeper-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: cigo-zookeeper
  labels:
    app: cigo-zookeeper
spec:
  ports:
  - name: "client"
    port: 32181
    targetPort: 32181
  - name: "server"
    port: 2888
    targetPort: 2888
  - name: "leader"
    port: 3888
    targetPort: 3888
  clusterIP: None
  selector:
    app: cigo-zookeeper
---
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  labels:
    app: cigo-zookeeper
  name: cigo-zookeeper
spec:
  selector:
    matchLabels:
      app: cigo-zookeeper 
  serviceName: cigo-zookeeper
  replicas: 3
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: cigo-zookeeper
    spec:
      containers:
      - env:
        - name: ZOOKEEPER_CLIENT_PORT
          value: "32181"
        - name: ZOOKEEPER_SERVER_PORT
          value: "2888"
        - name: ZOOKEEPER_LEADER_PORT
          value: "3888"
        - name: ZOOKEEPER_TICK_TIME
          value: "2000"
        - name: ZOOKEEPER_REPLICA_COUNT
          value: "3"
        image: sparsitytechnologies/cigo-zookeeper:0.1
        name: cp-zookeeper
        ports:
        - containerPort: 32181
        - containerPort: 2888
        - containerPort: 3888
      restartPolicy: Always
