CIGO-Core/deployments/kubernetes/cigo-kafka-connect-deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cigo-kafka-connect-ing
spec:
  rules:
  - host: my-trac.eu
    http:
      paths:
      - path: /cigo-kafka-connect
        backend:
          serviceName: cigo-kafka-connect 
          servicePort: 28083
---
apiVersion: v1
kind: Service
metadata:
  name: cigo-kafka-connect
  labels:
    app: cigo-kafka-connect
spec:
  type: NodePort  
  ports:
  - name: "28083"
    port: 28083
  selector:
    app: cigo-kafka-connect
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: cigo-kafka-connect
  name: cigo-kafka-connect
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cigo-kafka-connect
    spec:
      containers:
      - env:
        - name: KAFKA_REPLICA_COUNT
          value: "1" 
        - name: KAFKA_LISTENER_PORT
          value: "29092" 
        - name: CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR
          value: "3"
        - name: CONNECT_CONFIG_STORAGE_TOPIC
          value: cigo-config
        - name: CONNECT_GROUP_ID
          value: cigo
        - name: CONNECT_INTERNAL_KEY_CONVERTER
          value: org.apache.kafka.connect.json.JsonConverter
        - name: CONNECT_INTERNAL_VALUE_CONVERTER
          value: org.apache.kafka.connect.json.JsonConverter
        - name: CONNECT_KEY_CONVERTER
          value: io.confluent.connect.avro.AvroConverter 
        - name: CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL
          value: http://cigo-schema-registry.default.svc.cluster.local:8081
        - name: CONNECT_LOG4J_LOGGERS
          value: org.reflections=ERROR
        - name: CONNECT_LOG4J_ROOT_LOGLEVEL
          value: INFO 
        - name: CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR
          value: "3"
        - name: CONNECT_OFFSET_STORAGE_TOPIC
          value: cigo-offsets
        - name: CONNECT_PLUGIN_PATH
          value: /usr/share/java,/etc/kafka-connect/jars
        - name: CONNECT_REST_ADVERTISED_HOST_NAME
          value: cigo-kafka-connect.default.svc.cluster.local
        - name: CONNECT_REST_PORT
          value: "28083"
        - name: CONNECT_STATUS_STORAGE_REPLICATION_FACTOR
          value: "3"
        - name: CONNECT_STATUS_STORAGE_TOPIC
          value: cigo-status
        - name: CONNECT_VALUE_CONVERTER
          value: io.confluent.connect.avro.AvroConverter 
        - name: CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL
          value: http://cigo-schema-registry.default.svc.cluster.local:8081
        image: sparsitytechnologies/cigo-kafka-connect:latest
        name: cigo-kafka-connect 
        ports:
        - containerPort: 28083
      restartPolicy: Always
status: {}
