CIGO-Core/deployments/kubernetes/cigo-kibana-deployment.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kibana-ing
spec:
  backend:
    serviceName: kibana
    servicePort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  type: NodePort 
  ports:
  - name: "server"
    port: 5601
  selector:
    app: kibana
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  labels:
    app: kibana
  name: kibana
spec:
  selector: 
    matchLabels:
      app: kibana
  serviceName: kibana
  replicas: 1
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: 127.0.0.1:3306
        - name: DB_USER
          valueFrom:
            secretKeyRef:
              name: cloudsql-db-credentials
              key: username
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              name: cloudsql-db-credentials
              key: password
        image: docker.elastic.co/kibana/kibana:5.6.3
        name: kibana
        ports:
        - containerPort: 5601
        resources: {}

      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy",
                  "-instances=buoyant-episode-216912:europe-west1:mysql-share=tcp:3306",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true

      volumes:
          - name: cloudsql-instance-credentials
            secret:
              secretName: cloudsql-instance-credentials
      restartPolicy: Always
